Revise 'About Me' section content
Updated the 'About Me' section to reflect new focus and personal updates.

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p class="about-text">
-                    Specializing in agentic AI, multimodal communication, Teams extensibility, and Azure Communication Services. 
-                    This portfolio highlights my talks at various conferences, community calls, and webinars across AI, communications, 
-                    and Microsoft Cloud. I became a mum in 2025 😊 and now am back from maternity leave and excited to re-engage 
-                    with the developer community and resume public speaking in 2026.
+                   Hi there! Thanks for visiting my speaker portfolio. My work focuses on conversational AI, voice automation, Teams extensibility, and Azure Communication Services — and I genuinely enjoy turning complex tech into accessible learning for the community.
+<br>In 2025, I welcomed a new chapter in life as a mum. After my maternity break, I'm excited to reconnect, contribute, and kick off fresh speaking engagements in 2026.
                 </p>
             </div>
         </div>
