Modify event information and clean up links
Updated event details and removed placeholder links.

--- a/index.html
+++ b/index.html
@@ -97,14 +97,7 @@
                     <tbody>
                         <tr>
                             <td data-label="Talk Title">Beyond Chatbots: Add Multi Channel Communication to Your AI Apps</td>
-                            <td data-label="Event">DEVIntersection & nextGenAI (Las Vegas)</td>
-                            <td data-label="Links">
-                                <span class="link-placeholder">Links coming soon</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-label="Talk Title">Hack Together: RAG Hack Livestream</td>
-                            <td data-label="Event">Microsoft</td>
+                            <td data-label="Event">DEVIntersection & nextGenAI (Las Vegas). Hack Together: RAG Hack (Online)</td>
                             <td data-label="Links">
                                 <a href="https://www.youtube.com/watch?v=RAG_HACK_ID" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
