Revise hero section and about me content
Updated hero title and modified about text for clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <h1 class="hero-title">Milan Kaur</h1>
-                    <h2 class="hero-subtitle">Speaker Portfolio</h2>
+                    <h1 class="hero-title">Milan Kaur | Speaker Portfolio</h1>
                     <p class="hero-tagline">Developer Relations & AI Advocacy · Microsoft</p>
-                    <p class="hero-description">Specializing in agentic AI, multimodal communication, Teams extensibility, and Azure Communication Services</p>
                     <a href="#contact" class="btn btn-primary">Let's Connect</a>
                 </div>
             </div>
@@ -74,8 +72,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p class="about-text">
-                   Hi there! Thanks for visiting my speaker portfolio. My work focuses on conversational AI, voice automation, Teams extensibility, and Azure Communication Services — and I genuinely enjoy turning complex tech into accessible learning for the community.
-<br>In 2025, I welcomed a new chapter in life as a mum. After my maternity break, I'm excited to reconnect, contribute, and kick off fresh speaking engagements in 2026.
+                   Hi there! Thanks for stopping by my speaker portfolio. I love digging into new tech and turning that into content that's easy and fun to follow. I am a maker who loves the stage, and lately my talks have centered around AI - voice agents, chatbots and Azure Communication Services. 
+<br><br>I also became a mum in 2025, which has been the happiest adventure of all. Now that I’m back from maternity leave, I’m excited to dive back into community events and start speaking again in 2026.
                 </p>
             </div>
         </div>
