addec orrect links

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <td data-label="Talk Title">Beyond Chatbots: Add Multi Channel Communication to Your AI Apps</td>
                             <td data-label="Event">DEVIntersection & nextGenAI (Las Vegas). Hack Together: RAG Hack (Online)</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=RAG_HACK_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=xnmok9Al7iA&t=1802s" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -106,7 +106,7 @@
                             <td data-label="Talk Title">Build AI powered apps on the platform that runs Microsoft Teams</td>
                             <td data-label="Event">Microsoft Build</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=BUILD_VIDEO_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=e_A9XB_9iaY" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -115,7 +115,7 @@
                             <td data-label="Talk Title">Extend your M365 Copilot for line of business workflows</td>
                             <td data-label="Event">Microsoft Build & community calls</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=M365_VIDEO_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=3TkQnq709BU" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                                 <a href="https://github.com/sample/m365-copilot" class="link-btn" target="_blank" rel="noopener">
@@ -127,7 +127,7 @@
                             <td data-label="Talk Title">Build Intelligent Apps Using ACS</td>
                             <td data-label="Event">.NET Conf (Premier Track)</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=NETCONF_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=8Tin9cjx03Q&t=428s" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -136,7 +136,7 @@
                             <td data-label="Talk Title">AI Powered Multi Channel Notification App</td>
                             <td data-label="Event">Microsoft Reactor Livestream</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=REACTOR_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=1ypbagvb_Ws" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -145,7 +145,7 @@
                             <td data-label="Talk Title">Add WhatsApp channel to your AI chatbot</td>
                             <td data-label="Event">Microsoft Community Call</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=WHATSAPP_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=CCuMUaQd8sM" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -154,7 +154,7 @@
                             <td data-label="Talk Title">GPT powered voice assistant</td>
                             <td data-label="Event">Microsoft Ignite</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=IGNITE_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=Sd_VtbR9w4s" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -170,7 +170,7 @@
                             <td data-label="Talk Title">Adapting to Microsoft Exchange Online Changes: Understanding Azure's Email Service as an option</td>
                             <td data-label="Event">Microsoft Reactor</td>
                             <td data-label="Links">
-                                <a href="https://www.youtube.com/watch?v=EXCHANGE_ID" class="link-btn" target="_blank" rel="noopener">
+                                <a href="https://www.youtube.com/watch?v=Pzl9ZDIDdVg" class="link-btn" target="_blank" rel="noopener">
                                     <i class="fab fa-youtube"></i> Video
                                 </a>
                             </td>
@@ -214,7 +214,7 @@
                     </div>
                     <h3 class="project-title">Cake Shop Sample</h3>
                     <p class="project-description">RAG-powered AI application demonstrating retrieval augmented generation with practical e-commerce scenario.</p>
-                    <a href="https://github.com/sample/cake-shop" class="project-link project-link-placeholder">
+                    <a href="https://github.com/MilanKaur-01/cakeshop-phone-order" class="project-link project-link-placeholder">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
                 </div>
@@ -225,7 +225,7 @@
                     </div>
                     <h3 class="project-title">Contoso Calc Sample</h3>
                     <p class="project-description">Sample application demonstrating AI integration in business calculation scenarios using Azure services.</p>
-                    <a href="https://github.com/sample/contoso-calc" class="project-link project-link-placeholder">
+                    <a href="https://github.com/MilanKaur-01/RAG-with-WhatsApp" class="project-link project-link-placeholder">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
                 </div>
@@ -424,7 +424,7 @@
             <h2 class="section-title">Let's Connect</h2>
             <p class="contact-text">Open for conference speaking and guest lectures. I also provide consultancy and mentoring services through 1:1 bookings.</p>
             <div class="contact-links">
-                <a href="https://linkedin.com/in/milankaur" class="contact-link" target="_blank" rel="noopener">
+                <a href="https://www.linkedin.com/in/milankaurintech/" class="contact-link" target="_blank" rel="noopener">
                     <i class="fab fa-linkedin"></i>
                     <span>Connect on LinkedIn</span>
                 </a>
