--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </div>
                     <h3 class="project-title">Cake Shop Sample</h3>
                     <p class="project-description">RAG-powered AI application demonstrating retrieval augmented generation with practical e-commerce scenario.</p>
-                    <a href="https://github.com/MilanKaur-01/cakeshop-phone-order" class="project-link project-link-placeholder">
+                    <a href="https://github.com/MilanKaur-01/cakeshop-phone-order"  class="project-link" target="_blank" rel="noopener">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
                 </div>
@@ -225,7 +225,7 @@
                     </div>
                     <h3 class="project-title">Contoso Calc Sample</h3>
                     <p class="project-description">Sample application demonstrating AI integration in business calculation scenarios using Azure services.</p>
-                    <a href="https://github.com/MilanKaur-01/RAG-with-WhatsApp" class="project-link project-link-placeholder">
+                    <a href="https://github.com/MilanKaur-01/RAG-with-WhatsApp"  class="project-link" target="_blank" rel="noopener">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
                 </div>
