--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="gallery-placeholder">
                         <i class="fas fa-camera"></i>
                         <p>Conference Photo 1</p>
-                        <span class="image-instruction">Add: images/conference1.JPEG</span>
+                        <span class="image-instruction">Add: images/conference1.PNG</span>
                     </div>
                 </div>
                 
